--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -51,3 +51,12 @@
   bottom: 40px;
   right: 10px;
 }
+
+.home-card-title {
+  display: flex;
+  align-items: center;
+}
+
+.home-card-title-text {
+  margin-left: 10px;
+}
