fix the OS light them and app on dark theme header text

--- a/frontend/src/Body.css
+++ b/frontend/src/Body.css
@@ -25,6 +25,11 @@
   --ion-background-color: var(--ca-menu-background-color);
 }
 
+.dark {
+  color: var(--ca-menu-header-text);
+  background-color: var(--ca-menu-background-color);
+}
+
 .theme-icon {
   margin: 0px 7px;
 }
