add styling to make hr elements show

--- a/frontend/src/Body.css
+++ b/frontend/src/Body.css
@@ -39,3 +39,10 @@
   background-color: lightsalmon;
   color: black
 }
+
+hr {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
