Ensure that subtitle and title are same across web app and ios

--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -55,8 +55,11 @@
 .home-card-title {
   display: flex;
   align-items: center;
+  font-size:large;
 }
 
 .home-card-title-text {
   margin-left: 10px;
+  font-weight: bold;
+  color: var(--ion-text-color-rgb);
 }
