make shadowing consistent across all cards for ios and md

--- a/frontend/src/Body.css
+++ b/frontend/src/Body.css
@@ -3,6 +3,10 @@
   background-color: var(--ca-menu-background-color);
 }
 
+ion-card {
+  box-shadow: 1px 1px 3px;
+}
+
 .header-content {
   display: flex;
   justify-content: space-between;
