refactor: app menu

--- a/frontend/src/Body.css
+++ b/frontend/src/Body.css
@@ -47,6 +47,10 @@ ion-card {
   --ripple-color: var(--ca-menu-background-color);
 }
 
+.header-md {
+  box-shadow: none;
+}
+
 .notification-badge {
   position: absolute;
   top: 0px;
